# ChangeLog for dev-libs/ossp-uuid
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ChangeLog,v 1.32 2012/12/30 16:57:46 ulm Exp $

  30 Dec 2012; Ulrich Müller <ulm@gentoo.org> ossp-uuid-1.6.2-r1.ebuild,
  ossp-uuid-1.6.2-r2.ebuild:
  Fix LICENSE, see README file, bug 447640.

  21 Aug 2012; Christoph Junghans <ottxor@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
  added prefix keywords

*ossp-uuid-1.6.2-r2 (24 May 2012)

  24 May 2012; Tiziano Müller <dev-zero@gentoo.org>
  -files/ossp-uuid-1.6.1-gentoo.patch, +ossp-uuid-1.6.2-r2.ebuild,
  +files/ossp-uuid-1.6.2-gentoo-perl.patch, +files/ossp-uuid-1.6.2-php.patch:
  Add support for perl bindings (bug #350558, thanks to Scott Thomson). Added
  static-libs USE flag. Support for building with php-5.4.

  12 May 2012; Alexis Ballier <aballier@gentoo.org> ossp-uuid-1.6.2-r1.ebuild:
  keyword ~amd64-fbsd

  21 Aug 2011; Ole Markus With <olemarkus@gentoo.org> -ossp-uuid-1.6.1.ebuild,
  -ossp-uuid-1.6.2.ebuild:
  Non-maintainer commit: removing older ebuilds that depend on dev-lang/php:5
  (bug 363809)

  20 Aug 2011; Jeroen Roovers <jer@gentoo.org> ossp-uuid-1.6.2-r1.ebuild:
  Stable for HPPA (bug #373357).

  24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ossp-uuid-1.6.2-r1.ebuild:
  ppc/ppc64 stable wrt #373357

  23 Jul 2011; Raúl Porcel <armin76@gentoo.org> ossp-uuid-1.6.2-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #373357

  15 Jul 2011; Markus Meier <maekke@gentoo.org> ossp-uuid-1.6.2-r1.ebuild:
  x86 stable, bug #373357

  10 Jul 2011; Markus Meier <maekke@gentoo.org> ossp-uuid-1.6.2-r1.ebuild:
  arm stable, bug #373357

  30 Jun 2011; Markos Chandras <hwoarang@gentoo.org> ossp-uuid-1.6.2-r1.ebuild:
  Stable on amd64 wrt bug #373357

*ossp-uuid-1.6.2-r1 (05 Jun 2011)

  05 Jun 2011; <olemarkus@gentoo.org> +ossp-uuid-1.6.2-r1.ebuild,
  +files/ossp-uuid-1.6.2-gentoo-php.patch,
  +files/ossp-uuid-1.6.2-gentoo-r1.patch: