@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX ossp-uuid-1.6.2-gentoo-perl.patch 1114 SHA256 3052c608f7f3064f91960c408c2d3d4bab5e7426599ad5933c56f33259044f95 SHA512 c4cab9327b49ff0c31b05744b299e2955ed48551744b7dcbdd8c736bf54580d7fe7708b0ed6ef99342fd9aa35df1e790f1d7863dba71c51876701d105100c5fd WHIRLPOOL 71a683ec1ae10a2c40abc04ee59aa9d5c4cfc150881a9ed0f48759e82dcb7b59303ba742e13a6cb198de60dc239876ec6b3ccd021c05ae9946dff5edc9619157
 AUX ossp-uuid-1.6.2-gentoo-php.patch 1761 SHA256 6a128447989c0b280bf89418d8bf1de23c5e2157d86dcb6ce790701122bd8986 SHA512 e1ae6bf5e4069ac9157484e5cedb24167343c34df86a0ba0a89966ccfe2d856403a5cc97d84f8d1935212ecac1294a24351285cd8fb95b4a8af060145b2ac3af WHIRLPOOL 6d4dae94171f4e13ee38d158716d6b2a0bdf9ac6a28d13f52381cadb91e6394e73576000338fd499ff714ee8dfc5750aae2036541abe223d169eaed179bc3169
@@ -8,23 +8,23 @@ AUX ossp-uuid-1.6.2-gentoo.patch 4777 SHA256 4b51299cab73dec10500b2114a5993532a6
 AUX ossp-uuid-1.6.2-php.patch 371 SHA256 89d7f9cd6d2433e9a0cc1c601aa0a5fda2cc1a195a5ed7f2a92dfb8763c2c6a3 SHA512 cf948bc8087d7025b8dcf14eb3042460085fdf27ca7e07d71f51bf6dec2a0a081a96f5091fbc299b6a0a07c82e607cd8bb3428a901164be817db4440053550dd WHIRLPOOL f85447d38ee71547fd41d7f4688023a75faf23aa0b020bea312bddf594dbe7148d528e3483bf39d37d7576b53693b5ba4a2182df1767921edc34faf5f2c4686a
 DIST uuid-1.6.2.tar.gz 397048 SHA256 11a615225baa5f8bb686824423f50e4427acd3f70d394765bdff32801f0fd5b0 SHA512 16c7e016ce08d7679cc6ee7dec43a886a8c351960acdde99f8f9b590c7232d521bc6e66e4766d969d22c3f835dcc2814fdecc44eef1cd11e7b9b0f9c41b5c03e WHIRLPOOL 424a7e7e40e51aa7a516c129312548c315ab6581a567bab5ca7ea9289aa9b75ef58db12b947aa58e76d9d6bb151b2cad8709be11f068c43ab986a3396c3b2c4c
 EBUILD ossp-uuid-1.6.2-r1.ebuild 2200 SHA256 f5e2861debec1be331b0d2ab02f89caa8c787ba9cc76fe395feb7d5e88ccaf2b SHA512 faa3cfe0ede8003559f8ff8a965213c7204acf7d29e6a46e8363110b57516bbf48a76315f71feb5022c5dd6833e6e2be571278760e07729a3b1d2ac4b8b91375 WHIRLPOOL 60008a899eccce9e16403867e7e6539c962c0bbc829dbd287cb8130bdc8d77e07a8bd33d3e4e960478d950a8476da6605749416c1b3422e86f5a62a2dd5f9a59
-EBUILD ossp-uuid-1.6.2-r2.ebuild 2403 SHA256 28728255c38804aacb4ca2345136027ff5fd49254ad21c341b6d06f49e82c2fe SHA512 3d234ef3c346b0eb749c5d3dfb590674a4bf47e304ea8f10171798c6eb158898338c25bce5f7e8a056effd893e98d19a670d8502eca3cedbb740110426555600 WHIRLPOOL 17e3bbb784340dc7d9fb730130328a434d95c26e8e9a3a4cb35553e27c050ceb17dfd77c21199ec33399db781703685002fe53b3695f61a51cf952b18210aec2
-MISC ChangeLog 4490 SHA256 949fc67d76dcc1b09114bbebae678c2597cc1dddc1d60eca7a2917e0d981d0f7 SHA512 a76b919d7c809f797ca2181fa345ed66fb0ae2e0ed2a97da49d681c3e7c7addac1678c3273328beb9847bd508376033e336a191aae8986359739ce726ff008fc WHIRLPOOL 004d92ed3ae92cc275d92d013f37bac36476f2fda0c434793a8cddb934a500ebde5982b26efa7e4308a515f5300dfd72935e60084b8765bc9535ce58d7a956a7
+EBUILD ossp-uuid-1.6.2-r2.ebuild 2400 SHA256 1ceedeb4a9e28051953982ff24035cffa279167313592a36cc4ef71950a9a5d3 SHA512 5ae584ef8f03f18384e8f83ebdb06b3ac48f9e3b2e676a60e4085486651c61f8d9cf979c054c4aaba12a490e7fed0b70889442c4fe6232561478bd44f4783490 WHIRLPOOL f8debe9f9c9d9353e0e73334b4a348c6b0f913897a14fa5d0c65f03cca508a557b6cd9cf673064b42a16db7fa7338903f114da99273ee5e6b0f1830f7d7c4d3e
+MISC ChangeLog 4822 SHA256 3782aa5a9b6d00d90b628248954f5e6a51cd8b3f4adecb05a34d2d312e32500a SHA512 6ca52e932d3f60d42a382892934294318e2c9f3366c6eaaef747ec15ecd246cde2bab3de5dee37be0b1737df70a1e0b879e2b97bea6166980c0c8cb804b1db25 WHIRLPOOL 78db525a6374cc1f1b7c57868100f81e03f2a12ac1c24a8e8ede2bc08f509c0084dfac4be6fdd722420e25a2a589008526977371c32c87ebcbc4718fc39dc544
 MISC metadata.xml 234 SHA256 3299defd0e5e3780bf8db22ac755b39ecc0d5ae97b62507f6795c1dd74b4949b SHA512 0e24d065bda388b72e7034a20c7405b4319deafd2989b874e1740dd596f9cf7395b7acaa11c2617bcaa2cd8d295c44a768a789c1fbe07e455d3b33f2a6aa031b WHIRLPOOL d2b0c4dd530ba32a5272f7555f782ba9d69cb9a1e04b88b45c3f6a54d94e57af4bc59143861e469a595c5260f37a68c51d38d988734f7c5234368847ed62ef7b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQ4HMXAAoJEDxpGckxwJCB40YP/0SKtXcDhCr5w+1lNAEbMQ4c
-UShz2GaHuso4AoTj/CSYWyF9ZAPtF0BTsQwj0beuPx5bfyk6C4mRHHFBLS9TTRNs
-i38ZvqYq05aNKibZ4MEI0UvOlgAoidEwuSbrrmmO11AZyHQVSm/faHodzQ2xJOyz
-V5JaPJY5KS/OBv1l/w2W2ThJeM8yEMd1JjO8AAeDOipSt28oDWcaMS8KJn+Q6PJQ
-TPovb6gUdba2cwpqNacCgg/NMMTgcW3ZDWK5j3IkwJTJTr/3Q+8mh16elzK9ABBa
-6zLWOBn5bopQ24MgVLCHXthZos1CSlEqnc7Adlxj4PT1pXdijAFADQ/n0fgAa9FG
-Dz5dM6zIpUQZ1RLfEF7pspI4HkX1CVTOFtVKlUCSV+KR5483YZxdtAYzFYzeie2c
-COa/8aPVV3V1CjmrPloNj9oc46VniLIKV3VS2Q4Z30epuznqqpQS/fLz2OAFFS6c
-JqaSrvZpGjGLTk0ZKU+x45GEocreHk8fHvum9obKZ3wmUT45DO7fGxsRDWCszu06
-e3nbamA3MKSOrgvNCLa5r0MCtmhzlhxcM2SH7jZMwaGd0HfZMXJlrdcvrxizJqCh
-5TE+7VwqWp7rkXkP+k2s2pp17jD95sVk9+xgqGUeaoobXNGhKfUUYN66l1XnXiD5
-QiSiEiyk+mDnkkbWi7x1
-=Pp1j
+iQIcBAEBCgAGBQJRONayAAoJELp701BxlEWf+bQP/Au3UKTe8PwMtkpCx3hzr3N/
+Bfcqu4EVGuw04NLTcSvRk9ereD9bft8WC3GilILuuJ1EuQiV9alV9M6/jUXBxcw1
+YlKhlaRFc1Sd2Oc/VIMQJjTWAGbxfLVJma7TH8en5xxZ6RfX8YVPgpoUz1eq6OTY
+RYQdyvxKcqQyzggRVHiBNXE7tgpMsVev0N5NvFcAyAPXy6/sKQ0KbhvQYddNqaor
+VGg2M5frTFFWp78bqqnoyT1biED6D2Pr0iWfvhB4QThir8O+Ot8GR8FaqK4KHzda
+lwdydjPcEyN+zMRkcgV1tbhczBt6F05QLtN9Zfc8JSuiWTqk+GV5n1Y9rkMYb+r9
+0PxFS26k7CHspTmciI4utovdoQheqdB7aOIhxN3wGZSci9qpwYS+J0zgzuaFSRZr
+PXTXhBmo/6ihgaIVE2d5N6Qh7eNSvZotchu4Y42Gn6GaocJ0/09Clmuq2c+EFCHC
+0VDOsuqytHbcIdn9+UmdHaDZumgqEi2Dxl9/0L461iO6oVX3uY37/f3Ah9WHhzKg
+nD0FAZCZNpwncMLsXzJb/EdZUssH5EA00L84wZvmugqyUXvnbVbXGqKw8FUWyvMr
+dK3dXGF4GoGROJpavgjZdGe5t9QtUkgGhfTzq7/nZu0FFXUofZ3D3/uIDzC1tNR7
+h/xPsUdvSkEheiYFXxHd
+=r7mM
 -----END PGP SIGNATURE-----
