@@ -5,20 +5,22 @@ DIST gitolite-2.3.1.tar.gz 255807 SHA256 53303fea0154914356830202d3de23f94682bab
 DIST gitolite-3.1.tar.gz 119322 SHA256 36fc270c29e980f7217c203656373d1c44f73035fe18053163301cd10a4e0f04 SHA512 4b6a5a7fc558f4428350af7960e9f8ef923c114c2772c523d44c968a8c7d78dd52f2ae906f70d0f86fb1eab2c09f70a32df42c7cc24c002bec96dd654b904ec4 WHIRLPOOL 477f69bfcd2d5eff45f336fe569fd2b73c4349dd45d124cb0841a849b9f68b732afb3d1ddb497bf980bb3fd902b872b9c1018f09325a77e9eb1a16d0d4a94c3d
 DIST gitolite-3.2.tar.gz 120939 SHA256 62d56e3910b52d0ecb53d5962d4c919ede2c6c11283c3c845605bfc643e64ab8 SHA512 0e514e0c534aae59c1d03bd0849fe8c5c49995213bbd3d8eb7648730a14216fb910a4e295b9d46b959f55948a653a59700888b1b6c7909ff7ca01427d31f45e7 WHIRLPOOL efcdb05ae045e54fc0314ff77db93fed9eb5204ae6d755e82676a05dbf10055a38d617432298222b142dd0a2236fef4b9e8e2928482b77229a457e5b8a18ac36
 DIST gitolite-3.3.tar.gz 123163 SHA256 fae3755bcd9bf78bdf68167b5d4f01e28e0a25359417fb6c030c35998a94edd3 SHA512 899a5b48bf32952edf9e231daf02f65526c11e3dbf412ede22e6c8a0359c6c4858716e98c470faeaee23ad5a8c2125bea8c7b4b46cb33123f6a559a26a359d85 WHIRLPOOL 33baccd0d24a4d7f71a1b87f6ab5239968e4c4ebd2eaaeda230a298bf471277e568d529c9944973f40d0498fe57fde199dea81c36ae80971c5ad330ba8f7b170
+DIST gitolite-3.4.tar.gz 127700 SHA256 4139439c1439fc5d03a478d3d1cd0e0c0239b145b96d6795a116bfb2adefe9a4 SHA512 f8bd1c75052856bb65ea0259d3776f831bbf2c274e52496ee27272d4303efeaa1a58f50ffe4efc24286b843e38aa84bce7bcd7149157f8ffeee6d611b066ad7b WHIRLPOOL 4140ff2f09cc2959cea2f63141dc2541ee8f12f08a49fa3905d8bcef7068f9affca114a1e2737186b7e362bb2c11a9d479b7472937b87780ae196b0d52bc7eb8
 EBUILD gitolite-2.3.1.ebuild 1762 SHA256 f137729a5f313809bf987c31089ed5aaa1e16d426b75b625a21875e6a09f14d5 SHA512 a214ee52168ddae51477b9f16e849e3d78d40b595a54600fe47400e21e4c849499baed68efb57fb6d51ed433f87f6c494a4000cb3ac1f0253295f3652e71a0ba WHIRLPOOL 3388b1e698d11a36dae9194e98401f126fee3d786e24eadfcc50bfdfd34f92907dbb7839a6376104f51d8db2253378e6ad0e4c67ae60079e5934fef7631717b0
 EBUILD gitolite-3.1.ebuild 1940 SHA256 7451928a5d548617713e19816b70f6329ffeb2a7f9cbc98075f55de5f555aeeb SHA512 7af7af3ad8c8cdf8731824b7a20d498c3ec71b464422b8eaba85cae15b54cb0c29063fd0a47e5f3a2961a71c702535b48f5ab320995cce811b06f01d96cfb523 WHIRLPOOL da772af3c5b98c2ba49c104386b02e186b152de5db3c21104ff0c052e1ef4b718bf1bc2fcf590ea382954b9c54748b4d4f6bd84276d910955a214761d6901384
 EBUILD gitolite-3.2.ebuild 1944 SHA256 1b496199b34e21fe64b2899d731386c61d57751e04d711247dfa36b354da774e SHA512 15784f507e55bd58967085be526d21c157769ca66e12f20e3268928cd83d0edfb843e56e9332a2d62c3fd168b9976ed50d319c467f86f87d03af0804086ff710 WHIRLPOOL d4a7274173c772ce6a86402871e9be0575365808902a314486fc4311e3950a94997d0fe82553c1703543d556cfdd8b0a1621228e900abb378d61957fc62f62eb
 EBUILD gitolite-3.3.ebuild 1989 SHA256 23dd2c750d7c512a97723ecee98dcf1e45cd9d0299d16476136795a5bd1ef63d SHA512 bda0ec8f1ab5c04bd35fc9e021dfabc89ce2a4f6ef0c52ba7eea9a810ec5970c552bf2d40c661ac46830d70f15da1cd1619eee23b547f1ddd641ef4781a4ac5c WHIRLPOOL 0367f96aed5343215cea9926577c5bb11657f9ea7f568c87b7eb17c44ab7cbd1650d40e111a2424db1b5eb21a63d57ca1da814aa0a3b466551265157309845ff
-MISC ChangeLog 4391 SHA256 b8d56f92ac65af01f02860715ff567c7418fda2ed05069ff725e52a111277be0 SHA512 c55291de6eab0ac222df563a9837040962fc526ed7235162581972e25d0c985174746f7d4d4ebc29d57748ac10277f9e04899606744c53c7d7627768048f4bc8 WHIRLPOOL cf799669bac04f891d8b1b640c0d16db104708dcbe7c9eb905c8c72eeaf5937ea63c78bd5141109ea85d6d0b8e9a5a46363436e3ab4f6b55f58411aff669e2da
+EBUILD gitolite-3.4.ebuild 1989 SHA256 55ee7db6f041f2f774cf22bfa63b4430ff336dd2e3dbc319c2b4bcd58049c827 SHA512 2bb11aafc5e591c3aaf75d9160cfbc2780401c03f8ddf3a314564bd28b5dce4a8949c5f2e7de8d72c4aeab1719584b218bef1fd86563c6f63311fc2bc76bfa49 WHIRLPOOL e2990aa4332554cb743adf6702aa69e7f7575573540f2b3fb45db94f459611176ba21fcdc0f90b923094811214fda0dfd0894f8106b16e8f47a0bca4fd4085ea
+MISC ChangeLog 4522 SHA256 e9b93e795a365509cd3bd871ad83d260d795c49ef5919d457cd1c338dcf9afa9 SHA512 db2b5dd495e90a96305ddf5b4c109d45cd71987e99413f1c070cf276cb045698f915086019018e18c5afc6bf2bde686f3fdaf9de1dcf1ac4af6f4687ee260207 WHIRLPOOL f592de3bfc57538df8fb240a5185dd986d6f448afa4c751669d6e42c872691a983bbc49f746151f09a0ed61c30e9ed0841485dde33f6f62bffda0930f70d019f
 MISC metadata.xml 779 SHA256 b4ffa2d440bbd0bad5a09952ae8b0240b7056ad2773cd36c617d89ac0b589e8b SHA512 119a713d329854b20633d292fddd5e38f2292a81c76de4fe776cb06168ba03a2bde59b954b5453ec5232645516a62b2d0a2ec68ad27f9d011dbc309ebd1d123a WHIRLPOOL 1abe55643411d0c9a0750d221784ecd085916a3f806af052b6c5c8dc93844bed9897400535545d387697663cd1bec73b37f7fbc25956d517583eef156b945cf7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQ5Mn7AAoJEEqz6FtPBkyjVR8H/i/c7uVmn58A0X8JDMYljvB+
-5xIhtFuhoLjdbjffaKviJPZxpRP1g3OjNNgs+y4IubCFicc0BCfeJIeQ+GMHTV0x
-VqZo/JWMpq9YqU48Cp3ezCBpSmAJGdpMiWXXLk6/EkSsHXL4SqX0JrqheN6BXrfY
-dO0682wBlgxK3BlwY+6gPIOrYq/qZb9TGYIOzQjMj3bK6E1kMe9ZS2Kmly7iQNGl
-n8iGPNRMVS5e05Aq+vI4TuT5VacQRpoUg+vpE4oL1tnJk7oKEDOo7dSogxMsbGCb
-SHNeSUXucttU9mof4FJLWfkDuaJ1f8jG4rexX5D6czklb0jqjpQl1Yprv31Yfp0=
-=LXgM
+iQEcBAEBCAAGBQJROOBFAAoJEEqz6FtPBkyjoYsH/16I4/SMjRfiqrSj9j/1oOQn
+/S4p2l154XRnKMfntk0jw7ZevJb2RoxWd1FsYStzZkY64o6dIo+mboVSHVWjnpQl
+6Wj/kWDlYMyMeBO3ygB4hLa4FNKzzDcmXVJxO/AST6TfLDEJAPwPMYkLI4q5HSVZ
+hqAAl27sFTlob8T4yyuCzqjOyNSPaYrZr7MXM5GRkADlJDna5wfzvb0IEzYLqJf0
+7s+v5q++269sk7NN5MBDJkHsPcgIY2XruO0FuSt6OXXf754QiU7VyhfEt6/1tbRA
+MTfj7jMsF8cLcyGJw86wDFPr5CpT9SuSVbnClGLKPL7umB2fZIFMVy2e3sCWZgc=
+=6r7r
 -----END PGP SIGNATURE-----
