@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/gitolite
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.28 2013/01/02 23:59:51 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.29 2013/03/07 18:45:21 radhermit Exp $
+
+*gitolite-3.4 (07 Mar 2013)
+
+  07 Mar 2013; Tim Harder <radhermit@gentoo.org> +gitolite-3.4.ebuild:
+  Version bump (bug #460660).
 
 *gitolite-3.3 (02 Jan 2013)
 
