@@ -1,6 +1,15 @@
 # ChangeLog for dev-libs/ossp-uuid
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ChangeLog,v 1.32 2012/12/30 16:57:46 ulm Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/ossp-uuid/ChangeLog,v 1.35 2013/03/07 18:04:36 ago Exp $
+
+  07 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
+  Stable for x86, wrt bug #460488
+
+  07 Mar 2013; Agostino Sarubbo <ago@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
+  Stable for amd64, wrt bug #460488
+
+  07 Mar 2013; Jeroen Roovers <jer@gentoo.org> ossp-uuid-1.6.2-r2.ebuild:
+  Stable for HPPA (bug #460488).
 
   30 Dec 2012; Ulrich Müller <ulm@gentoo.org> ossp-uuid-1.6.2-r1.ebuild,
   ossp-uuid-1.6.2-r2.ebuild:
